cart-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cartapi
  template:
    metadata:
      labels:
        app: cartapi
    spec:
      containers:
        - name: cartapi
          image: paulomendez19/cart.api:latest
---
apiVersion: v1
kind: Service
metadata:
  name: cart-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: cartapi
  ports:
    - name: cartapi
      protocol: TCP
      port: 80
      targetPort: 80
