catalog-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalogapi
  template:
    metadata:
      labels:
        app: catalogapi
    spec:
      containers:
        - name: catalogapi
          image: paulomendez19/catalog.api:latest
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: catalogapi
  ports:
    - name: catalogapi
      protocol: TCP
      port: 80
      targetPort: 80
