ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: catalog.com
      http:
        paths:
          - path: /api/items
            pathType: Prefix
            backend:
              service:
                name: catalog-clusterip-srv
                port:
                  number: 80
          - path: /api/user/auth
            pathType: Prefix
            backend:
              service:
                name: catalog-clusterip-srv
                port:
                  number: 80
          - path: /api/artist
            pathType: Prefix
            backend:
              service:
                name: catalog-clusterip-srv
                port:
                  number: 80
          - path: /api/genre
            pathType: Prefix
            backend:
              service:
                name: catalog-clusterip-srv
                port:
                  number: 80
          - path: /api/c/items
            pathType: Prefix
            backend:
              service:
                name: cart-clusterip-srv
                port:
                  number: 80
